force-app/main/default/objects/SMS_AutoSuspend_Config__c/SMS_AutoSuspend_Config__c.object-meta.xml
<CustomObject>
    <label>SMS Auto Suspend Config</label>
    <nameField>
        <displayFormat>{00}</displayFormat>
        <label>SMS Auto Suspend Config Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SMS Auto Suspend Config</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>