force-app/main/default/objects/SMS_AutoSuspend_Config__c/fields/IsSuspend__c.field-meta.xml
<CustomField>
    <fullName>IsSuspend__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsSuspend</label>
    <type>Checkbox</type>
</CustomField>