force-app/main/default/objects/SMS_AutoSuspend_Config__c/fields/Threshold_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Threshold_Accounts__c</fullName>
    <label>Threshold Accounts</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>