force-app/main/default/objects/SMS_AutoSuspend_Config__c/fields/Threshold_Amount__c.field-meta.xml
<CustomField>
    <fullName>Threshold_Amount__c</fullName>
    <label>Threshold Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>