force-app/main/default/objects/SMS_AutoSuspend_Config__c/fields/Threshold_Days__c.field-meta.xml
<CustomField>
    <fullName>Threshold_Days__c</fullName>
    <label>Threshold Days</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>