force-app/main/default/objects/SMS_AutoSuspend_Config__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Day_of_Week__c</columns>
    <columns>IsSuspend__c</columns>
    <columns>Threshold_Accounts__c</columns>
    <columns>Threshold_Amount__c</columns>
    <columns>Threshold_Days__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>